# CtCI-6th-Edition-cpp

./: .gitignore  CMakeLists.txt
Ch 1.Arrays And Strings/: 10.Ouicksort.cpp  CMakeLists.txt
Ch 4. Trees and Graphs/: 4-1-Route-Between-Nodes.cpp  4-2-Minimal-Tree.cpp  4.10_Check_Subtree.cpp  4.2_Minimal_Tree.cpp  4.4_Check_Balanced.cpp  4.5_Validate_BST.cpp  4.6_Successor.cpp
Chapter-10-Sorting-and-Searching/: CMakeLists.txt
Chapter-3-Stacks-and-Queues/: 3.2_stack_min.cpp  3.3_stack_of_plastes  3.4_queue_via_stacks  3.5_sort_stack  3.6_animal_shelter
Chapter-4-tree-and-graph/: 4.10_check_subtree.cpp  4.11_random_node.cpp  4.2_minimal_tree.cpp  4.3_list_of_depths.cpp  4.4_check_balanced.cpp  4.5_validate_BST.cpp  4.6_successor.cpp  4.7_build_order.cpp  4.8_first_common_ancestor.cpp  4.9_BST_sequences.cpp  BinarySearchTree.cpp  CMakeLists.txt
chapter-2-Linked-Lists/: 2-1-remove-dups.cpp  2-2-kthToLast.cpp  2-3-delete-middle-node.cpp  2-4-partition.cpp  2-5-add-lists.cpp  2-6-palindrome.cpp  2-7-intersection.cpp  2-8-loop-detection.cpp  CMakeLists.txt  IntLinkedList.cpp  LinkedList.cpp  List.h  SinglyLinkedList.cpp  Vector.cpp
chapter-8-recursion-and-Dynamic-Programming/: 8-1-Triple-Step.cpp  8-11-Coins.cpp  8-2-Robot-in-a-Grid.cpp  8-3-Magic-Index.cpp  8-5-Recursive-Multiply.cpp  8-7-Permutations-without-Dups.cpp  8-8-Permutation-with-dups-alt.cpp  8-8-Permutation-with-dups.cpp  8-9-parens-alt.cpp  8-9-parens.cpp  8.10_Paint_Fill.cpp  8.1_Triple_Step.cpp  8.2_Grid_Paths.cpp  8.3_Magic_Index.cpp  8.4_Power_Set.cpp  8.5_Recursive_Multiply.cpp  8.9_Parens.cpp  (+3 more)
(+73 files in other folders)
